// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`přepiš existující účast 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "id": "---",
  },
  "status": "uloženo v pořádku",
}
`;

exports[`přepiš existující účast 2`] = `
Array [
  Object {
    "ucasti": Array [
      Object {
        "platby": Array [],
        "rok": 2018,
        "ubytovani": Array [],
        "udaje": Object {
          "jmeno": "Božena",
          "narozeni": Object {
            "rok": 1967,
          },
          "obec": "Kladno 1",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "psc": "327 41",
          "stat": "Česká republika",
        },
      },
      Object {
        "platby": Array [],
        "rok": 2017,
        "ubytovani": Array [],
        "udaje": Object {
          "jmeno": "Božena",
          "narozeni": Object {
            "rok": 1967,
          },
          "obec": "Kladno 5",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "psc": "327 41",
          "stat": "Česká republika",
        },
      },
      Object {
        "platby": Array [],
        "rok": 2016,
        "ubytovani": Array [],
        "udaje": Object {
          "jmeno": "Božena",
          "narozeni": Object {
            "rok": 1967,
          },
          "obec": "Kladno 3",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "psc": "327 41",
          "stat": "Česká republika",
        },
      },
      Object {
        "platby": Array [],
        "rok": 2015,
        "ubytovani": Array [],
        "udaje": Object {
          "jmeno": "Božena",
          "narozeni": Object {
            "rok": 1967,
          },
          "obec": "Kladno 4",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "psc": "327 41",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`saveUcast [not authenticated] 1`] = `
Object {
  "code": "authentication token invalid",
  "status": "Špatný ověřovací token. Zkus se přihlásit znovu. Detaily: JsonWebTokenError: jwt must be provided",
}
`;

exports[`vytvoř dvě účasti 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "id": "---",
  },
  "status": "uloženo v pořádku",
}
`;

exports[`vytvoř dvě účasti 2`] = `
Array [
  Object {
    "ucasti": Array [
      Object {
        "platby": Array [],
        "rok": 2017,
        "ubytovani": Array [],
        "udaje": Object {
          "jmeno": "Božena",
          "narozeni": Object {
            "rok": 1967,
          },
          "obec": "Kladno Rozdělov",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "psc": "327 41",
          "stat": "Česká republika",
        },
      },
      Object {
        "platby": Array [],
        "rok": 2018,
        "ubytovani": Array [],
        "udaje": Object {
          "jmeno": "Božena",
          "narozeni": Object {
            "rok": 1967,
          },
          "obec": "Kamenický Přívoz",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "psc": "327 41",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`vytvoř minimálního účastníka 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "id": "---",
  },
  "status": "uloženo v pořádku",
}
`;

exports[`vytvoř minimálního účastníka 2`] = `
Array [
  Object {
    "ucasti": Array [
      Object {
        "platby": Array [],
        "rok": 2018,
        "ubytovani": Array [],
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;
